--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 	<title>GIT it like it's hot!</title>
-        <meta name="JORGE_WALTER" content="Jasmina Travnjak"/>
+        <meta name="JORGE_WALTER" content="oui"/>
 	</head>
 
     <body >
