la musique et le link

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
     <head>
 	<title>GIT it like it's hot!</title>
         <meta name="JORGE_WALTER" content="oui"/>
+        <link rel="stylesheet" type="text/css" href="GITStyle.css">
 	</head>
 
     <body >
+        <audio controls>
+        <source src="rap.mp3" type="audio/mpeg">
+      </audio>
 	<section>
         <h1>THE GIT RAP</h1>
 		<p>yo, this is the git rap
