--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <source src="rap.mp3" type="audio/mpeg">
       </audio>
 	<section>
+	<center>
         <h1>THE GIT RAP</h1>
 		<p>yo, this is the git rap
 			we gonna do it like this
@@ -119,6 +120,7 @@ we roll in compliance with the history of code
 
 ( code code code code code)
 </p>
+</center>
 		</section>
 		<footer>
 		 <a href="https://soundcloud.com/marak/the-git-rap">GIT RAP all rights reserved</a>
